--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #f1f5f8;
+  color: #222;
+}
+
+section{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem;
+}
+
+article{
+  background-color: rgb(236, 230, 222);
+  width: 25vw;
+  padding: 0.7rem;
+  margin: 0 auto 1rem auto;
+  display: flex;
+  flex-direction: column;
+}
+img{
+  padding-bottom: 1rem;
+  width: 60%;
+
+}
+
+h2{
+  font-size: 1.1rem;
+}
+
+h3{
+  font-size: 1rem;
+  color: gray;
+  padding-bottom: 0.7rem;
+}
+
+button{
+  margin-bottom: 0.7rem;
+}
+
+
+@media screen and (max-width: 990px) {
+  article{
+      background-color: rgb(236, 230, 222);
+      width: 50vw;
+      padding: 0.5rem;
+      margin: 0 auto 1rem auto;
+      display: flex;
+      flex-direction: column;
+  }
+    img{
+      width: 70%;
+      padding-bottom: 0.5rem;
+      margin: 0 auto;
+    }
+    h2{
+      font-size: 1rem;
+    }
+    h3{
+      font-size: 0.7rem;
+    }
+    button{
+      font-size: 0.7rem;
+      margin-bottom: 0.5rem;
+    }
+
+}
+@media screen and (max-width: 780px) {
+    article{
+      background-color: rgb(236, 230, 222);
+      width: 80vw;
+      padding: 0.5rem;
+      margin: 0 auto 1rem auto;
+      display: flex;
+      flex-direction: column;
+  }
+    img{
+      width: 70%;
+      padding-bottom: 0.5rem;
+    }
+    h2{
+      font-size: 1rem;
+    }
+    h3{
+      font-size: 0.7rem;
+    }
+    button{
+      font-size: 0.7rem;
+      margin-bottom: 0.5rem;
+    }
+
 }
